[Accessibility] Fixed the color contrast of the tutorial (#2931)
* Fixed the color contrast of the tutorial.

* The tutorial now use the Microsoft orange color for not categorized block.

* refactoring

* Refactoring

--- a/theme/tutorial.less
+++ b/theme/tutorial.less
@@ -5,6 +5,8 @@
 /* Reference import */
 @import (reference) "semantic.less";
 
+@inlineBlockColor: #D83B01;
+
 /*******************************
       Tutorial mode
 *******************************/
@@ -208,8 +210,8 @@ span.docs.inlineblock {
     padding: 0.10rem 0.3rem;
     border-radius: 0.3rem;
     white-space: nowrap;
-    background-color: lighten(@orange, 10%);
-    border: 1px solid @orange;
+    background-color: @inlineBlockColor;
+    border: 1px solid darken(@inlineBlockColor, 0.2);
     color: @white;
 }
 
